# HWPX_editor

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  _analyze_xml.py  get_models.py  interactive_agent.py  mypy_errors.txt  pyproject.toml  ruff_errors.txt  temp_test.py  test_llm_modify.py  test_read.py
.github/workflows/: ci.yml
docs/: architecture.md  hwpx_editor_v3_plan.md  hwpx_reference_analysis.md
docs/agent/: WORK_RULES.md
src/app/: main.py
src/app/api/: endpoints.py
src/app/core/: config.py
src/app/domain/: models.py
src/app/infra/: hwpx_tool.py
src/app/service/: editor_service.py
temp_test/: section0.xml
templates/: [별지 1의5] 이의신청서(부대관리훈령).hwpx  [별지 20] 군의관 소견서(부대관리훈령).hwpx  [별지 21] 지휘관 확인서(부대관리훈령).hwpx  [별지 29] 귀국보고서(부대관리훈령).hwpx  [별지 30] 겸직허가 신청서(부대관리훈령).hwpx  공문 예시.hwpx
templates/HWP/: [별지 1의5] 이의신청서(부대관리훈령).hwp  [별지 20] 군의관 소견서(부대관리훈령).hwp  [별지 21] 지휘관 확인서(부대관리훈령).hwp  [별지 29] 귀국보고서(부대관리훈령).hwp  [별지 30] 겸직허가 신청서(부대관리훈령).hwp
tests/: test_dynamic_table.py  test_llm_modify.py  test_lxml_deepcopy.py  test_modify.py  test_read.py
