[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic-settings>=2.0",
  "lxml>=6.0.2",
  "python-multipart>=0.0.22",
  "python-dotenv>=1.2.1",
  "httpx>=0.28.1",
  "pywin32>=311",
  "pyhwp>=0.1b15",
  "six>=1.17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
